# bitbot

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy-n8n.yaml  deploy-ollama.yaml
docs_root/: route_from_airbnb_to_camping_site.txt  route_from_airbnb_to_camping_site_outline.txt
n8n/lite/: docker-compose.yaml
n8n/lite/workflows/: Email_Research_Workflow.json  (+11 more)
n8n/workflows/: Approval Example test.json  BitBot Slack interactive element Handler.json  Bitovi Site - Chat.json  Bitovi Site - Vectorize Pinecone.json  Bitovi Site - Vectorize.json  Calendar tool.json  Confluence - DevOps - Vectorize - Pinecone.json  Custom Google Search tool.json  Email Research Workflow.json  Email Research tool.json  Email Test.json  Freshbooks Test.json  Generate DevOps Team Gathering Slide.json  GitHub Backup Workflows.json  Google Calendar Agent.json  Google Drive - Inbox Classifier.json  Google search tool test.json  Hubspot Email Research Tool.json  Jira DevOps - Chat.json  Jira DevOps - Get Tickets.json  Jira DevOps - Vectorize test.json  Jira DevOps - Vectorize.json  Jira DevOps Remove bitbot-processing.json  KB with sources tool - pinecone.json  Slack Thread summarizer.json  Slack Thread vectorizor tests.json  Slack Vectorization - test.json  Website Visitor Summarizer.json  Website Visitor.json  bitbot core.json  child test - child.json  child test - parent.json  duckduckgo-search-tool.json  slack message test.json  slack trigger test.json  vector store test - child.json  vector store test - parent.json
src/bitbot_langgraph/: main.py
(+69 files in other folders)
