[tool.poetry]
name = "bitbot"
version = "0.1.0"
description = "bitbot using langgraph"
authors = ["Mick McGrath <mick@bitovi.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
duckduckgo-search = "^6.2.6"
langgraph = "^0.2.3"
langchain-community = "^0.2.11"
langchain_openai = "^0.1.20"
langchain-experimental = "^0.0.64"
wikipedia = "^1.4.0"
asyncio = "^3.4.3"
PyGithub = "^2.3.0"
pysqlite3 = "^0.5.3"
aiosqlite = "^0.20.0"
langgraph-checkpoint-sqlite = "^1.0.0"

[tool.poetry.scripts]
bitbot = "bitbot.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
